# AUDIOLYZER

./: .gitignore  .pre-commit-config.yaml  =0.1.1  CHANGELOG.md  CONTRIBUTING.md  DIARIZATION_FIX_REPORT.md  LICENSE  MASTERTODO.md  Makefile  README.md  constraints.txt  mypy.ini  pyproject.toml  requirements.txt  rerun_diarization.py  ruff.toml
.cursor/plans/: streamlit-ui-revisions-54a3ecae.plan.md
.github/workflows/: smoke.yml
.streamlit/: config.toml
checkpoints/FRCRN_SE_16K/: README.md
checkpoints/MossFormer2_SS_16K/: README.md
configs/: balanced.yaml  dev.yaml  fast.yaml  prod.yaml  reality_tv.yaml  show_config.template.json
data/: README.md
docs/: DIRECTORY_STRUCTURE.md  IMPLEMENTATION_READY.md  NAME_MANAGEMENT.md  PRD.md  QUICK_REFERENCE.md  SOLUTION_ARCHITECTURE.md  START_HERE.md  TECHSTACK.md  TECH_SPEC.md  TECH_STACK_REVIEW.md  audio_preprocessing.md  install_preprocessing.md  preprocessing_implementation_summary.md
eval/: .gitignore  FINAL_POLISH.md  QUICKSTART.md  README.md  UPDATES.md  __init__.py  eval.yaml  requirements.txt  runner.py  test_install.py
eval/align/: __init__.py  align_words_to_rttm.py
eval/asr/: __init__.py  faster_whisper.py  sherpa_onnx.py
eval/diar/: __init__.py  bench_der.py  manifest.json  pyannote.py  speechbrain.py
eval/score/: __init__.py  der.py  wer.py
eval/utils/: __init__.py  download_models.py  env.py  io.py  timing.py
outputs/: README.md
pipeline/: __init__.py  audio_ops.py
preproc/: __init__.py  enhance.py  separate.py
reports/: asr_costs.jsonl  asr_costs_summary.json  baseline_stage2_metrics.json
scripts/: bench_clearervoice_vs_current.py  benchmark_preprocessing.py  export_cluster_snippets.py  export_episode_bundle.py  install_preprocessing.py  rebuild_voice_bank.py  run_pipeline.py  run_streamlit.sh  seed_voice_bank.py  seed_voice_bank_from_snippets.py
scripts/maintenance/: cleanup_cache.py  sync_cast_configs.py
scripts/setup/: download_models.py  init_data_dirs.py  setup_ffmpeg_mac.sh  verify_dependencies.py
src/show_scribe/: __init__.py  cli.py  exceptions.py  ui_ops.py
tests/: conftest.py  generate_sample.py
tests/fixtures/: README.md
tests/integration/: test_extract_audio_pipeline.py  test_transcript_pipeline.py  test_voice_identification_pipeline.py
tests/ui/: test_ui_ops.py
tests/unit/: test_imports.py
ui/: __init__.py
(+113 files in other folders)
